Fix coding style for all challenges

--- a/algorithms/dynamic-programming/square-subsequences/Makefile
+++ b/algorithms/dynamic-programming/square-subsequences/Makefile
@@ -1,7 +1,10 @@
+CXX := g++
+CXXFLAGS := -std=c++11 -stdlib=libc++ -Wall -o out
+
 default: build run
 
 build:
-	g++ -std=c++11 -stdlib=libc++ -Wall main.cpp
+	$(CXX) $(CXXFLAGS) main.cpp
 
 run:
-	./a.out
+	./out
