--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,1 +1,1 @@
-filter=-legal/copyright,-build/include,-runtime/references
+filter=-legal/copyright,-build/include,-build/c++11,-runtime/references,-runtime/string
